Restyaboard color changed related to our organization color

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2500,11 +2500,11 @@ header{
 	#listview_table td:before { content: attr(data-title); }
 }
 .github-markdown a {
-	color: #f47564;
+	color: #d848d3;
 	word-wrap: break-word;
 	white-space: normal;
 	&:hover, &:focus {
-		color: #f14b34;
+		color: #d848d3;
 		text-decoration: underline;
 	}
 }
