--- a/client/css/variables.less
+++ b/client/css/variables.less
@@ -13,7 +13,7 @@
 @gray-light:             lighten(#000, 60%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
-@brand-primary:         #f47564;
+@brand-primary:         #d848d3;
 @brand-success:         #8DCA35;
 @brand-info:            #00BFDD;
 @brand-warning:         #f0ad4e;
@@ -607,7 +607,7 @@
 @alert-warning-border:        transparent;
 
 @alert-danger-bg:             #fef4f3;
-@alert-danger-text:           #f47564;
+@alert-danger-text:           #d848d3;
 @alert-danger-border:         transparent;
 
 
