Changes: Footer bg color changes added

--- a/client/js/templates/footer.jst.ejs
+++ b/client/js/templates/footer.jst.ejs
@@ -8,7 +8,7 @@ if (_.isEmpty(role_links.where({
 	}
 }
 %>
-<section class="action-block action-content">
+<section class="action-block action-content bg-primary">
 <div class="row navbar navbar-default list-group-item-text">
 <ul class="nav nav-pills navbar-left"> 
   <li class="footer-logo active"> 
@@ -232,4 +232,4 @@ if (_.isEmpty(role_links.where({
 <div class="hidden-blocks hide js-hidden-blocks"></div>	
 </div>
 </section>
-<section class="search-block-main" id="search-page-result-block"></section>
+<section class="search-block-main bg-primary" id="search-page-result-block"></section>
