--- a/client/js/templates/header.jst.ejs
+++ b/client/js/templates/header.jst.ejs
@@ -130,7 +130,7 @@
 	</nav>
 </div>
 <% } else { %>
-<div role="navigation" class="navbar navbar-default" id="js-navbar-default">
+<div role="navigation" class="navbar bg-primary" id="js-navbar-default">
   <div class="container-fluid">
   <div class="row">
 	<div class="navbar-left">
