Changes : Footer bg color changes added

--- a/client/js/templates/footer.jst.ejs
+++ b/client/js/templates/footer.jst.ejs
@@ -9,7 +9,7 @@ if (_.isEmpty(role_links.where({
 }
 %>
 <section class="action-block action-content bg-primary">
-<div class="row navbar navbar-default list-group-item-text">
+<div class="row navbar bg-primary list-group-item-text">
 <ul class="nav nav-pills navbar-left"> 
   <li class="footer-logo active"> 
   	<a href="#/boards" title="<%- SITE_NAME %>" class="js-start"><img src="img/logo-icon.png" alt="[Images: <%- SITE_NAME %>]" title="<%- SITE_NAME %>"  data-container="body" id="js-footer-brand-img" /></a>
