--- a/client/js/templates/organization_header.jst.ejs
+++ b/client/js/templates/organization_header.jst.ejs
@@ -1,4 +1,4 @@
-  <div class="container-fluid">
+  <div class="container-fluid bg-grey">
 	<div class="navbar-left navbar-btn col-sm-11 col-xs-10 nav  col-lg-5 col-md-4 list-group-item-text">
 		<div class="clearfix row-flex">
 			<h2 class="navbar-left navbar-btn col-flex col-flex1 list-group-item-heading list-group-item-text"><span class="navbar-left"><a href="#/boards" title="<%- SITE_NAME %>"><img src="img/logo.png" alt="[Image: <%- SITE_NAME %>]" title="<%- SITE_NAME %>" class="img-responsive center-block"/></a></span></h2>
