--- a/client/js/templates/footer.jst.ejs
+++ b/client/js/templates/footer.jst.ejs
@@ -118,7 +118,7 @@ if (_.isEmpty(role_links.where({
    <% } %>	
   <% if(apps !== ""){ %>
   <li class="dropdown hidden-xs board-btn js-show-add-apps-list add-apps-list"> 
-	  <a title="<%- i18next.t('Apps') %>" href="#" data-toggle="dropdown" class="btn btn-default js-show-apps-list"><span><%- i18next.t("Apps") %> </span><span><i class="icon-collapse"></i></span> </a>
+	  <a title="<%- i18next.t('aplicaciones') %>" href="#" data-toggle="dropdown" class="btn btn-default js-show-apps-list"><span><%- i18next.t("aplicaciones") %> </span><span><i class="icon-collapse"></i></span> </a>
 	  <ul role="menu" class="dropdown-menu js-dropdown-popup col-xs-12 pre-scrollable vertical-scrollbar">
 			<% _.each(apps, function(key,value) { %>
 				<li id="<%- value %>" class="org-btn"><a title="<%- i18next.t(key.name) %>" href="#" data-toggle="modal" data-target="#<%- key.id %>_modal" class="highlight-icon clearfix"><span style="background-image:url(<%- key.icon %>); background-size:cover;" class="preview-thumbnail"></span><span class="details btn-block navbar-btn"><%- i18next.t(key.name) %></span></a></li>
@@ -136,11 +136,11 @@ if (_.isEmpty(role_links.where({
 	<ul class="nav nav-pills navbar-right">
 	<% if(!_.isUndefined(authuser.user)){%>
 	<% if((navigator.userAgent.toLowerCase().indexOf('android') > -1) && (navigator.userAgent.toLowerCase().indexOf('chrome') > -1)){ %>
-		  <li class="hidden-xs"><a href="#" tittle="<%- i18next.t('Install this webapp to your phone') %>" data-toggle="modal" data-target="#add_home_modal" class="btn btn-default pull-right"><i class="icon-plus"></i></a></li>
+		  <li class="hidden-xs"><a href="#" tittle="<%- i18next.t('Instalar esta aplicación web en su teléfono') %>" data-toggle="modal" data-target="#add_home_modal" class="btn btn-default pull-right"><i class="icon-plus"></i></a></li>
 	<% } %>
 	<% if (!_.isUndefined(authuser.user) &&  !_.isEmpty(model.user) && model.user.role_id == 1) { %>
 		<li class="phone-block"><a class="btn btn-primary pull-right js-show-qr-code hidden-xs" id="phone" title="<%- i18next.t('View in iOS App') %>" href=""><i class="icon-mobile-phone lead"></i></a></li>
-	  	<li class="hidden-xs"><a title="<%- i18next.t('Admin CP') %>" class="btn btn-default pull-right admin-cp" href="#/activities"><span class="icon-user lead text-primary"></span><span class="hidden-xs text-primary"><%- i18next.t("Admin") %></span></a></li>
+	  	<li class="hidden-xs"><a title="<%- i18next.t('Administración CP') %>" class="btn btn-default pull-right admin-cp" href="#/activities"><span class="icon-user lead text-primary"></span><span class="hidden-xs text-primary"><%- i18next.t("Administración") %></span></a></li>
 	  <% } %>
 	  <li class="dropdown  instant_cards">
 	   <a href="#" data-toggle="dropdown" class="dropdown-toggle btn btn-default pull-right" title="<%-model.user.full_name%> (<%-model.user.username%>)">
@@ -155,21 +155,21 @@ if (_.isEmpty(role_links.where({
 			</span>&nbsp; <b class="caret"></b>
 	   </a>
 		<ul class="dropdown-menu text-left js-change-avatar-form-response">
-			<li> <a title="<%- i18next.t('Logout') %>" href="#/users/logout"><%- i18next.t("Logout") %></a> </li>			
+			<li> <a title="<%- i18next.t('Cerrar sesión') %>" href="#/users/logout"><%- i18next.t("Cerrar sesión") %></a> </li>			
 			<li class="divider"></li>
-			<li><a href="#" class="js-show-shortcuts-modal" data-toggle="modal" data-target="#ModalShortcutView"><%- i18next.t('Shortcuts') %></a></li>
+			<li><a href="#" class="js-show-shortcuts-modal" data-toggle="modal" data-target="#ModalShortcutView"><%- i18next.t('Los accesos directos') %></a></li>
 			<% if(model.is_show_enable_notification === true) { %>
-				<li><a title="<%- i18next.t('Enable Desktop Notification') %>" href="#" class="js-enable-desktop-notification"><%- i18next.t("Enable Desktop Notification") %></a></li>
+				<li><a title="<%- i18next.t('Habilitar notificación de escritorio') %>" href="#" class="js-enable-desktop-notification"><%- i18next.t("Habilitar notificación de escritorio") %></a></li>
 			<% } %>	
 			<% if(!_.isEmpty(role_links.where({slug: "user_changepassword"})) && parseInt(authuser.user.is_ldap) === 0){ %>
-				<li><a title="<%- i18next.t('Change Password') %>" href="#/users/<%-model.user.id%>/changepassword"><%- i18next.t("Change Password") %></a></li>
+				<li><a title="<%- i18next.t('Cambia la contraseña') %>" href="#/users/<%-model.user.id%>/changepassword"><%- i18next.t("Cambia la contraseña") %></a></li>
 			<% } %>
 		    <% if(!_.isEmpty(role_links.where({slug: "view_user"}))){ %>
-				<li><a title="<%- i18next.t('Profile') %>" href="#/user/<%-model.user.id%>"><%- i18next.t("Profile") %></a></li>
+				<li><a title="<%- i18next.t('Perfil') %>" href="#/user/<%-model.user.id%>"><%- i18next.t("Perfil") %></a></li>
 			<% } %>
-			<li><a title="<%- i18next.t('About Restyaboard') %>" href="#/about"><%- i18next.t("About Restyaboard") %></a></li>
+			<li><a title="<%- i18next.t('sobre Restyaboard') %>" href="#/about"><%- i18next.t("sobre Restyaboard") %></a></li>
 			<li class="dropdown-submenu dropdown language-dropdown">
-				<a href="#" data-toggle="dropdown" class="dropdown-toggle js-open-popover" title="<%- i18next.t('Change Language') %>"><span><i class="icon-caret-left"></i></span><%- i18next.t('Change Language') %></a>
+				<a href="#" data-toggle="dropdown" class="dropdown-toggle js-open-popover" title="<%- i18next.t('Cambiar idioma') %>"><span><i class="icon-caret-left"></i></span><%- i18next.t('Cambiar idioma') %></a>
 				<ul class="dropdown-menu text-left js-change-language-form-response pre-scrollable vertical-scrollbar">
 				   <% _.each(JSON.parse(languages), function(v, k) { %>
 						<li> <a class="cur <% if(k !== authuser.user.language) { %>js-change-language<%}%>" data-lang="<%- k %>"><%- v %><% if((!_.isEmpty(authuser.user.language) && k === authuser.user.language) || (_.isEmpty(authuser.user.language) && k === DEFAULT_LANGUAGE)){ %><i class="icon-ok"></i><% } %></a> </li>			
@@ -185,10 +185,10 @@ if (_.isEmpty(role_links.where({
 		<div id="all_activities" class="tabbable tabs-below dropdown-menu pull-right js-dropdown-popup" role="menu">
 		  <div class="tab-content bg-info clearfix">
 		    <div class="col-xs-12 user-filter navbar-btn">
-				<span class="pull-left"><strong><%- i18next.t('Activity') %></strong></span>
+				<span class="pull-left"><strong><%- i18next.t('Actividad') %></strong></span>
 				<ul class="nav nav-pills pull-right mob-no-mar">
-					<li id="modal-activities"><a href="#" title="<%- i18next.t('Filter by activities') %>" class="text-muted"><i class="icon-time small"></i></a></li>
-					<li id="modal-comments"><a href="#" title="<%- i18next.t('Filter by comments') %>" class="text-muted"><i class=" icon-comment-alt small"></i></a></li>
+					<li id="modal-activities"><a href="#" title="<%- i18next.t('Filtrar por actividades') %>" class="text-muted"><i class="icon-time small"></i></a></li>
+					<li id="modal-comments"><a href="#" title="<%- i18next.t('Filtrar por comentarios') %>" class="text-muted"><i class=" icon-comment-alt small"></i></a></li>
 				</ul>    
 			</div> 
 			<div class="tab-pane js-all-activity-list notification-list vertical-scrollbar col-xs-12 border-top" id="all_">
@@ -201,14 +201,14 @@ if (_.isEmpty(role_links.where({
 			<% } %> 
 				<% if(!_.isEmpty(board_id) && board_id !== 0 && board_id !== '0') { %>
 					<div class="col-xs-12 border-top text-center js-load-link" id="js-load-link1">
-						<a href="#" title="View all activity" id="js-notification-load-more" class="js-board-load-more btn btn-link"><%- i18next.t("Load more activities") %></a>
+						<a href="#" title="View all activity" id="js-notification-load-more" class="js-board-load-more btn btn-link"><%- i18next.t("Cargar más actividades") %></a>
 					</div>
 					<div class="col-xs-12 border-top text-center js-load-link hide" id="js-load-link2">
-						<a href="#" title="<%- i18next.t('View all activity') %>" id="js-notification-load-more-all" class="js-board-load-more-all btn btn-link"><%- i18next.t("Load more activities") %></a>
+						<a href="#" title="<%- i18next.t('View all activity') %>" id="js-notification-load-more-all" class="js-board-load-more-all btn btn-link"><%- i18next.t("Cargar más actividades") %></a>
 					</div>
 				<%} else { %>  
 				<div class="col-xs-12 border-top text-center js-load-link" id="js-load-link">
-					<a href="#" title="<%- i18next.t('View all activity') %>" id="js-notification-load-more-all" class="js-all-load-more-all btn btn-link"><%- i18next.t("Load more activities") %></a>
+					<a href="#" title="<%- i18next.t('View all activity') %>" id="js-notification-load-more-all" class="js-all-load-more-all btn btn-link"><%- i18next.t("Cargar más actividades") %></a>
 				</div>  
 				<% } %>
 			 </div>
@@ -223,8 +223,8 @@ if (_.isEmpty(role_links.where({
 	  </li>
 	  <% } else { %>
 		<% if(board_id !== undefined && board_id !== null && board_id !== ""){ %>
-	  		<li class="<% if(Backbone.history.fragment.indexOf('users/register') != -1){%>active<%}%>"><a href="#/users/register" title="<%- i18next.t('Register') %>"><strong><%- i18next.t("Register") %></strong></a></li>
-			<li class="<% if(Backbone.history.fragment.indexOf('users/login') != -1){%>active<%}%>"><a href="#/users/login"	title="<%- i18next.t('Login') %>"><strong><%- i18next.t("Login") %></strong></a></li>
+	  		<li class="<% if(Backbone.history.fragment.indexOf('users/register') != -1){%>active<%}%>"><a href="#/users/register" title="<%- i18next.t('Registro') %>"><strong><%- i18next.t("Registro") %></strong></a></li>
+			<li class="<% if(Backbone.history.fragment.indexOf('users/login') != -1){%>active<%}%>"><a href="#/users/login"	title="<%- i18next.t('Iniciar sesión') %>"><strong><%- i18next.t("Iniciar sesión") %></strong></a></li>
 		<% } %>
 	  <% } %>
 	 </ul>
